welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: type mismatch;
 found   : String("R")
 required: Boolean
		if ("R") {
                    ^BDRBuggle:7: error: type mismatch;
 found   : String("L")
 required: Boolean
		} else if ("L") { 
                           ^BDRBuggle:9: error: type mismatch;
 found   : String("I")
 required: Boolean
		} else if ("I") { 
                           ^BDRBuggle:11: error: type mismatch;
 found   : String("A")
 required: Boolean
		} else if ("A") { 
                           ^BDRBuggle:13: error: type mismatch;
 found   : String("B")
 required: Boolean
		} else if ("B") {
                           ^BDRBuggle:15: error: type mismatch;
 found   : String("C")
 required: Boolean
		} else if ("C") { 
                           ^BDRBuggle:17: error: type mismatch;
 found   : String("Z")
 required: Boolean
		} else if ("Z") { 
                           ^BDRBuggle:19: error: type mismatch;
 found   : String("X")
 required: Boolean
		} else if ("X") { 
                           ^BDRBuggle:21: error: type mismatch;
 found   : String("Y")
 required: Boolean
		} else if ("Y") {
                           ^